# GigaMate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new_model.md
.github/workflows/: tests.yml
data/: 99-gigabyte-keyboard-rgb.rules  99-gigamate.rules  gigabyte-keyboard-rgb-tray.desktop  gigabyte-keyboard-rgb.service  gigamate.desktop  gigamate.service
docs/: PROFILE_SCHEMA.md  RGB_PROTOCOL.md  research.md
src/gigabyte_keyboard_rgb/: cli.py  config.py  protocol.py  tray.py
src/gigamate/: __init__.py  __main__.py  acpi.py  cli.py  config.py  paths.py  profiles.py  protocol.py  tray.py
src/gigamate/profile_data/: 0414_8105.json
src/gigamate_acpi/: ..module-common.o.cmd  .Module.symvers.cmd  .gigamate_acpi.ko.cmd  .gigamate_acpi.mod.cmd  .gigamate_acpi.mod.o.cmd  .gigamate_acpi.o.cmd  .modules.order.cmd  Makefile  gigamate_acpi.c
tests/: test_acpi.py  test_profiles.py  test_protocol.py
