[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gigamate"
version = "1.0.0"
description = "GigaMate — Gigabyte laptop management for Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "adriansc"},
    {name = "GigaMate Contributors"},
]
keywords = ["gigabyte", "aero", "keyboard", "rgb", "fan", "acpi", "gimate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Hardware :: Hardware Drivers",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "pyusb>=1.2",
]

[project.scripts]
gigamate = "gigamate.cli:main"
gigamate-tray = "gigamate.tray:main"
# Legacy backward-compat aliases:
gigabyte-rgb = "gigamate.cli:main"
gigabyte-rgb-tray = "gigamate.tray:main"

[project.urls]
Homepage = "https://github.com/goodeesh/GigaMate"
Issues = "https://github.com/goodeesh/GigaMate/issues"
Repository = "https://github.com/goodeesh/GigaMate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gigamate = ["profile_data/*.json"]
